--- a/App/src/app/views/protect-zone/report-factory/report-factory.component.html
+++ b/App/src/app/views/protect-zone/report-factory/report-factory.component.html
@@ -10,7 +10,7 @@
 
     <div class="e-toolbar-item e-search-wrapper" aria-disabled="false" title="Search">
       <div class="e-input-group e-search" role="search">
-        <input id="grid_1706664052_0_searchbar" [(ngModel)]="code" (keyup.enter)="filter()" class="e-input" name="input" type="search" placeholder="Search">
+        <input id="grid_1706664052_0_searchbar" [(ngModel)]="code" (keyup.enter)="filter()" class="e-input" name="input" type="search" placeholder="Search code">
         <span id="grid_1706664052_0_searchbutton" (click)='filter()' class="e-input-group-icon e-search-icon e-icons" tabindex="-1" title="Search" aria-label="search">
           <i class="fa fa-search"></i>
         </span>
