--- a/App/src/app/views/protect-zone/staff-info/staff-info.component.html
+++ b/App/src/app/views/protect-zone/staff-info/staff-info.component.html
@@ -109,7 +109,8 @@
           <label for="file">
             Select File (*Notice: Excel file must be followed a system template. If you do not have a
             template, please <a [href]="excelDownloadUrl" style="font-weight: bolder;">click here</a> to download. Thank you!)
-
+            <br>
+            Hướng dẫn format cell ngày sinh <a [href]="apiUrl">preview</a>
           </label>
           <input (change)="fileProgress($event)" name="file" id='file' type="file" class="form-control" />
         </div>
