--- a/App/src/app/views/protect-zone/staff-info/staff-info.component.html
+++ b/App/src/app/views/protect-zone/staff-info/staff-info.component.html
@@ -31,9 +31,11 @@
           [pageSettings]="pageSettings"
           gridLines='Both'
           [editSettings]='editSettings'
+          [searchSettings]='searchOptions'
           (checkBoxChange)='checkBoxChange($event)'
           (toolbarClick)='toolbarClick($event)'
           (actionBegin)="actionBegin($event)"
+          (created)='created()'
           (rowSelected)='rowSelected($event)'        >
           <e-columns>
             <e-column type='checkbox' width='30'></e-column>
