--- a/App/src/app/views/protect-zone/staff-info/staff-info.component.html
+++ b/App/src/app/views/protect-zone/staff-info/staff-info.component.html
@@ -36,7 +36,9 @@
           (toolbarClick)='toolbarClick($event)'
           (actionBegin)="actionBegin($event)"
           (created)='created()'
-          (rowSelected)='rowSelected($event)'        >
+          (dataBound)='dataBound()'
+          (rowSelected)='rowSelected($event)'
+          [selectedRowIndex]='selectedRowIndex'       >
           <e-columns>
             <e-column type='checkbox' width='30'></e-column>
             <e-column field="id" textAlign='Center' [visible]="false" isPrimaryKey="true" headerText="{{ 'ID'}}"> </e-column>
