--- a/App/src/app/views/protect-zone/record-error/record-error.component.html
+++ b/App/src/app/views/protect-zone/record-error/record-error.component.html
@@ -1,4 +1,13 @@
 <div class="row">
+  <div class="col-md-12 mb-2 d-flex justify-content-start align-items-center">
+
+    <div class="font-weight-bold px-3">{{'Filter' | translate}}:</div>
+    <ejs-datepicker class="pr-3" (change)='dateOnchange($event)' [(ngModel)]="date"></ejs-datepicker>
+
+    <button class="btn btn-sm btn-secondary mr-3" (click)="reset()"><i class="fa fa-times"></i></button>
+   <button type="button" class="btn btn-secondary mx-3" (click)='excelExport()'>Export Excel</button>
+
+  </div>
   <div class="col-md-12">
     <div class="card">
       <div class="card-body table-responsive p-0">
@@ -17,9 +26,10 @@
           [toolbar]='toolbarOptions'
           allowTextWrap='true'
           (dataBound)='dataBound()'
+          (excelQueryCellInfo)='excelQueryCellInfo($event)'
         >
           <e-columns>
-            <e-column field="#" textAlign='Center' width="80" isPrimaryKey="true" headerText="#">
+            <e-column field="number" textAlign='Center' width="80" isPrimaryKey="true" headerText="#">
               <ng-template #template let-data>
                 {{NO(data.index)}}
               </ng-template>
@@ -33,7 +43,7 @@
             <e-column field="gender" textAlign='Center' [width]="90" headerText="{{ 'Gender'}}"> </e-column>
             <e-column field="station" textAlign='Center' headerText="{{ 'Station'}}"> </e-column>
             <e-column field="kind" textAlign='Center' headerText="{{ 'Kind'}}"> </e-column>
-            <e-column field="errorKind" headerTextAlign='Center' [disableHtmlEncode]='false' textAlign='Left' headerText="{{ 'Error Kind'}}"> </e-column>
+            <e-column field="errorKind" headerTextAlign='Center' textAlign='Left' [disableHtmlEncode]='true' headerText="{{ 'Error Kind'}}"> </e-column>
             <e-column field="createdTime" type='date' format='MM-dd-yyy HH:mm' textAlign='Center' headerText="{{ 'Date Time'}}"> </e-column>
           </e-columns>
         </ejs-grid>
