--- a/App/src/app/views/protect-zone/record-error/record-error.component.html
+++ b/App/src/app/views/protect-zone/record-error/record-error.component.html
@@ -43,7 +43,8 @@
             <e-column field="gender" textAlign='Center' [width]="90" headerText="{{ 'Gender'}}"> </e-column>
             <e-column field="station" textAlign='Center' headerText="{{ 'Station'}}"> </e-column>
             <e-column field="kind" textAlign='Center' headerText="{{ 'Kind'}}"> </e-column>
-            <e-column field="errorKind" headerTextAlign='Center' textAlign='Left' [disableHtmlEncode]='true' headerText="{{ 'Error Kind'}}"> </e-column>
+            <e-column field="errorKind" headerTextAlign='Center' [disableHtmlEncode]='false' textAlign='Left' headerText="{{ 'Error Kind'}}">
+            </e-column>
             <e-column field="createdTime" type='date' format='MM-dd-yyy HH:mm' textAlign='Center' headerText="{{ 'Date Time'}}"> </e-column>
           </e-columns>
         </ejs-grid>
