--- a/App/src/app/views/protect-zone/access-failed/access-failed.component.html
+++ b/App/src/app/views/protect-zone/access-failed/access-failed.component.html
@@ -43,9 +43,9 @@
             <e-column field="gender" textAlign='Center' [width]="90" headerText="{{ 'Gender'}}"> </e-column>
             <e-column field="station" textAlign='Center' headerText="{{ 'Station'}}"> </e-column>
             <e-column field="errorKind" headerTextAlign='Center' textAlign='Left' [disableHtmlEncode]='false' headerText="{{ 'Error Kind'}}"> </e-column>
-            <e-column field="lastCheckInDateTime" type='date' format='MM-dd-yyy HH:mm' textAlign='Center' headerText="{{ 'Check in time'}}"> </e-column>
-            <e-column field="lastCheckOutDateTime" type='date' format='MM-dd-yyy HH:mm' textAlign='Center' headerText="{{ 'Check out time'}}"> </e-column>
-            <e-column field="createdTime" type='date' format='MM-dd-yyy HH:mm' textAlign='Center' headerText="{{ 'Date Time'}}"> </e-column>
+            <e-column field="lastCheckInDateTime" textAlign='Center' headerText="{{ 'Check in time'}}"> </e-column>
+            <e-column field="lastCheckOutDateTime" textAlign='Center' headerText="{{ 'Check out time'}}"> </e-column>
+            <e-column field="createdTime" type='date' format='MM-dd-yyy HH:mm' textAlign='Center' headerText="{{ 'Access control'}}"> </e-column>
           </e-columns>
         </ejs-grid>
       </div>
