--- a/App/src/app/views/protect-zone/record-error/record-error.component.html
+++ b/App/src/app/views/protect-zone/record-error/record-error.component.html
@@ -45,7 +45,7 @@
             <e-column field="kind" textAlign='Center' headerText="{{ 'Kind'}}"> </e-column>
             <e-column field="errorKind" headerTextAlign='Center' [disableHtmlEncode]='false' textAlign='Left' headerText="{{ 'Error Kind'}}">
             </e-column>
-            <e-column field="createdTime" type='date' format='MM-dd-yyy HH:mm' textAlign='Center' headerText="{{ 'Date Time'}}"> </e-column>
+            <e-column field="createdTime" type='date' format='MM-dd-yyy HH:mm' textAlign='Center' headerText="{{ 'Error time'}}"> </e-column>
           </e-columns>
         </ejs-grid>
       </div>
