--- a/App/src/app/views/protect-zone/access-failed-report/access-failed-report.component.html
+++ b/App/src/app/views/protect-zone/access-failed-report/access-failed-report.component.html
@@ -41,11 +41,11 @@
             <e-column field="department" textAlign='Center' headerText="{{ 'Department'}}"> </e-column>
             <e-column field="fullName" textAlign='Left' headerTextAlign='Center' headerText="{{ 'FullName'}}"> </e-column>
             <e-column field="gender" textAlign='Center' [width]="90" headerText="{{ 'Gender'}}"> </e-column>
-            <e-column field="station" textAlign='Center' headerText="{{ 'Station'}}"> </e-column>
             <e-column field="errorKind" headerTextAlign='Center' textAlign='Left' [disableHtmlEncode]='false' headerText="{{ 'Error Kind'}}"> </e-column>
             <e-column field="createdTime" type='date' format='MM-dd-yyy HH:mm' textAlign='Center' headerText="{{ 'Access control'}}"> </e-column>
             <e-column field="lastCheckInDateTime" textAlign='Center' headerText="{{ 'Check in time'}}"> </e-column>
             <e-column field="lastCheckOutDateTime" textAlign='Center' headerText="{{ 'Check out time'}}"> </e-column>
+            <e-column field="entryFactoryExpiryTime" textAlign='Center' headerText="{{ 'Entry factory exp. date'}}"> </e-column>
           </e-columns>
         </ejs-grid>
       </div>
